@@ -10,18 +10,6 @@
 // Software License 1 along with this program. If not, see
 // <https://github.com/sequencing/licenses/>
 //
-// -*- mode: c++; indent-tabs-mode: nil; -*-
-//
-// Starka
-// Copyright (c) 2009-2014 Illumina, Inc.
-//
-// This software is provided under the terms and conditions of the
-// Illumina Open Source Software License 1.
-//
-// You should have received a copy of the Illumina Open Source
-// Software License 1 along with this program. If not, see
-// <https://github.com/sequencing/licenses/>
-//
 
 #include "test_config.h"
 
