@@ -141,10 +141,10 @@ void IndelErrorModel::Deserialize(const Json::Value& root)
 
 
 void IndelErrorModel::calc_prop(const starling_base_options& client_opt,
-                            const starling_indel_report_info& iri,
-                            double& indel_error_prob,
-                            double& ref_error_prob,
-                            bool use_length_dependence) const
+                                const starling_indel_report_info& iri,
+                                double& indel_error_prob,
+                                double& ref_error_prob,
+                                bool use_length_dependence) const
 {
     // determine simple case
     const bool is_simple_indel(iri.it==INDEL::INSERT || iri.it==INDEL::DELETE);
