@@ -1,3 +1,4 @@
+- STARKA-237 new format for scoring and indel models
 - STARKA-239 update strelka VQSR and parameters for higher recall
 v2.3.13
 - STAR-34: When SNVs are not phased due to low read depth (<10), add
